avfilter/vf_telecine: Make frame writable before writing into it

Fixes Ticket 5627

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>
(cherry picked from commit fa0097e008a145ea8324879d4e24c1881bb86279)

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>